# violet

./: Cargo.toml  README.md  docker-compose.yml  docker-start.sh
.github/workflows/: docker-build.yml
im-connect/: Cargo.toml  Dockerfile  README.md  build.rs  config.toml  docker-entrypoint.sh
im-connect/proto/: im_message_wrap.proto
im-connect/src/: auth.rs  channel.rs  cli.rs  config.rs  constants.rs  device.rs  login.rs  main.rs  message.rs  mq.rs  nacos.rs  redis.rs  ws.rs
im-connect/src/config/: mod.rs  settings.rs
im-connect/src/handlers/: mod.rs  websocket.rs
im-connect/src/proto/: mod.rs
im-connect/src/routes/: mod.rs
im-server/: Cargo.toml  Dockerfile  config.toml  docker-entrypoint.sh
im-server/src/: db.rs  error.rs  main.rs  redis.rs
im-server/src/config/: mod.rs
im-server/src/dto/: mod.rs
im-server/src/handlers/: auth_handler.rs  friend_handler.rs  im_chat_handler.rs  im_friendship_handler.rs  im_group_handler.rs  im_message_handler.rs  im_outbox_handler.rs  im_user_handler.rs  message_handler.rs  mod.rs  subscription_handler.rs  upload_handler.rs  user_handler.rs  webrtc_handler.rs
im-server/src/middleware/: auth.rs
im-server/src/model/: id_meta_info.rs  im_chat.rs  im_friendship.rs  im_group.rs  im_message.rs  im_user.rs  mod.rs  user.rs
im-server/src/mqtt/: mod.rs
im-server/src/routes/: mod.rs
im-server/src/service/: friend_service.rs  im_chat_service.rs  im_friendship_service.rs  im_group_service.rs  im_message_service.rs  im_outbox_service.rs  im_user_service.rs  mod.rs  user_service.rs
im-share/: Cargo.toml
im-share/src/: auth.rs  lib.rs  mqtt.rs  redis.rs  snowflake.rs  subscription.rs  user.rs
im-share/src/group/: mod.rs
im-share/src/model/: mod.rs
im-share/src/utils/: mod.rs
mqtt/: mosquitto.conf
nginx/: nginx.conf
sql/: violet_table.sql
srs/conf/: docker.conf
