[package]
name = "im-connect"
version = "0.1.0"
edition = "2024"

[dependencies]
im-share = {path = "../im-share"}
tokio = { version = "1.48.0", features = ["full"] }
rumqttc = { version = "0.24", default-features = false, features = ["use-rustls"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
dotenvy = "0.15"
axum = { version = "0.8.6", features = ["ws"] }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
toml = "0.9"
once_cell = "1.20"
reqwest = { version = "0.12", features = ["json"] }
tower-http = { version = "0.6", features = ["cors"] }
jsonwebtoken = "9.3"
chrono = { version = "0.4", features = ["serde"] }