[package]
name = "im-connect"
version = "0.1.0"
edition = "2021"

[build-dependencies]
prost-build = "0.13"
protoc-bin-vendored = "3"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["ws", "json", "macros"] }
tower-http = { version = "0.5", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
prost = "0.13"
prost-types = "0.13"
bytes = "1"
dashmap = "6"
futures = "0.3"
futures-util = "0.3"
thiserror = "2"
anyhow = "1"
uuid = { version = "1", features = ["v4"] }
jsonwebtoken = "9"
redis = { version = "0.28", features = ["tokio-comp"] }
lapin = { version = "2", features = ["rustls"] }
nacos-sdk = "0.6"
chrono = { version = "0.4", features = ["serde"] }
urlencoding = "2"
clap = { version = "4", features = ["derive"] }
hostname = "0.4"
