[package]
name = "im-share"
version = "0.1.0"
edition = "2024"


[lib]
crate-type = ["rlib"]

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.144"
thiserror = "2.0.17"
once_cell = "1.19"
tokio = { version = "1.48.0", features = ["full"] }
rumqttc = { version = "0.25", default-features = false, features = ["use-rustls"] }
anyhow = "1.0"
toml = "0.9.8"
uuid = { version = "1.10", features = ["v4"] }
reqwest = { version = "0.12", features = ["json"] }
urlencoding = "2.1"
tracing = "0.1"
lazy_static = "1.5"
redis = { version = "0.26", features = ["tokio-comp", "connection-manager"] }
jsonwebtoken = "9.3"
chrono = { version = "0.4", features = ["serde"] }
